# edgesearch

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  analysis.js  build-client.js  build-common.js  build-worker.js  build.js  const.js  data.js  package.json  page.analytics.hbs  page.hbs  page.resources.hbs  prebuild.sh  publish-worker.sh  queue.js  server.js  static.js  template.js  tsconfig.json  version  worker-metadata.json
.github/workflows/: cli.yaml  jobs.yaml  msft.yaml
archive/: BitSet.ts  bloom.c  build.rs  build.ts  compileToWasm.ts  kv.rs  main.ts  matrix.rs  package.json  toggle.html  util.ts  worker.js
archive/resources/: runner.bloom.c  runner.main.c  runner.murmur.c  worker.config.ts
builder/: Cargo.toml
builder/resources/: bitset.c  bloom.c  index.c  main.c  postingslist.c  roaring.c  roaring.h  sys.c
builder/script/: minify.js  package.json  tsconfig.json
builder/script/src/: config.ts  main.ts
builder/src/: lib.rs  main.rs  murmur3.rs
builder/src/data/: bitmaps.rs  document_terms.rs  documents.rs  mod.rs  packed.rs  postings_list.rs
builder/src/deploy/: cfreq.rs  kv.rs  mod.rs  worker.rs
builder/src/test/: mod.rs
builder/src/util/: format.rs  log.rs  mod.rs
builder/tester/: package.json
client/: anime.min.js  build-browser.js  clipboard.min.js  fetch.umd.js  package.json  page.hbs  promise-polyfill.min.js  script.js  style.css  tsconfig.json
client/assets/: browserconfig.xml  site.webmanifest
client/src/: main.ts
data/: process.js  retrieve.js
demo/: README.md
demo/jobs/client/: .gitignore  package.json  tsconfig.json  webpack.config.js
demo/jobs/data/: .gitignore  get-data.js  package.json
demo/jobs/worker/: build.sh  deploy.sh  test.sh
demo/wiki/: .gitignore  README.md  package.json
demo/wiki/client/: .gitignore  package.json
demo/wiki/data/: process.py
demo/wiki/worker/: build.sh  deploy.sh
demo/work-at-microsoft/: .gitignore  README.md  package.json
demo/work-at-microsoft/client/: .gitignore  build.ts  clipboard.min.js  edgesearch-client.min.js  package.json  page.hbs  promise-polyfill.min.js  script.js  tsconfig.json
demo/work-at-microsoft/data/: .gitignore  build.ts  package.json
demo/work-at-microsoft/src/: anime.min.js  fabric-icons-inline.css  package.json  page.hbs  script.js  style.css
demo/work-at-microsoft/worker/: build.sh  deploy.sh  (+1 more)
deployer/cloudflare/: .gitignore  package-lock.json  package.json  tsconfig.json
script/: .gitignore  minify.js  package.json  tsconfig.json
script/src/: http.ts  main.ts
src/: BitSet.ts  build.ts  buildData.ts  compileToWasm.ts  deploy.ts  lib.rs  main.rs  main.ts  minifyJs.ts  minifyWorker.ts  page.hbs  page.resources.hbs  resources.ts  util.ts
src/data/: document_terms.rs  documents.rs  mod.rs  packed.rs
src/deploy/: cfreq.rs  mod.rs  worker.rs
src/ds/: bloom.ts  ds.ts  incidence.ts
src/resources/: runner.bitset.c  runner.bloom.c  runner.incidence.c  runner.main.c  runner.murmur.c  runner.sort.c  runner.sys.c  runner.words.c  worker.config.ts  worker.main.ts
src/static/: anime.min.js  childnode-remove.min.js  clipboard.min.js  fabric-icons-inline.css  object-assign-auto.min.js  promise-polyfill.min.js  script.js  style.css
src/test/: mod.rs
src/util/: format.rs
static/: Sortable.min.js  fabric-icons-inline.css  fabric.min.css  script.js  style.css
tester/: README.md  package-lock.json  package.json  server.js
wasm/: chunks.c  index.c  main.c  roaring.c  sys.c
worker/: worker.c  worker.js
(+32 files in other folders)
