[package]
name = "edgesearch"
description = "Fast serverless full-text search at the edge using only Cloudflare Workers and KV, with WebAssembly and Roaring Bitmaps"
license = "MIT"
homepage = "https://github.com/wilsonzlin/edgesearch"
readme = "README.md"
keywords = ["full", "text", "search", "index", "bitmap"]
repository = "https://github.com/wilsonzlin/edgesearch.git"
version = "0.1.0"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"
include = ["/script/dist/main.js", "/wasm/**/*", "/src/**/*", "/build.rs", "/Cargo.toml", "/LICENSE", "/README.md"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
base64 = "0.11.0"
bytes = "0.5.4"
byteorder = "1.3.2"
croaring = "0.4.4"
env_logger = "0.7.1"
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
structopt = "0.3.5"
