[package]
name = "edgesearch"
description = "Serverless full-text search with Cloudflare Workers, WebAssembly, and Roaring Bitmaps"
license = "MIT"
homepage = "https://github.com/wilsonzlin/edgesearch"
readme = "README.md"
keywords = ["full", "text", "search", "index", "bitmap"]
repository = "https://github.com/wilsonzlin/edgesearch.git"
version = "0.4.0"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"
include = ["/script/dist/main.js", "/wasm/**/*", "/src/**/*", "/build.rs", "/Cargo.toml", "/LICENSE", "/README.md"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
byteorder = "1.3.2"
croaring = "0.4.4"
structopt = "0.3.5"
