[package]
name = "edgesearch"
description = "Serverless full-text search with Cloudflare Workers, WebAssembly, and Roaring Bitmaps"
license = "MIT"
homepage = "https://github.com/wilsonzlin/edgesearch"
readme = "README.md"
keywords = ["full", "text", "search", "index", "bitmap"]
repository = "https://github.com/wilsonzlin/edgesearch.git"
version = "0.4.1"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"
include = ["/script/dist/**/*.js", "/wasm/**/*", "/src/**/*", "/build.rs", "/Cargo.toml", "/LICENSE", "/README.md"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["roaring"]
# WARNING: If using nonportable, disable default features.
nonportable = ["croaring-sys", "libc"]

[dependencies]
byteorder = "1.3.2"
clap = "2.0"
croaring-sys = { version = "0.5.0", optional = true }
libc = { version = "0.2.97", optional = true }
roaring = { version = "0.7.0", optional = true }
structopt = "0.3.5"
