[package]
name = "edgesearch"
version = "0.0.1"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[dependencies]
base64 = "0.11.0"
bytes = "0.5.4"
byteorder = "1.3.2"
croaring = "0.4.4"
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
serde = { version = "1.0.104", features = ["derive"] }
structopt = "0.3.5"
