[package]
name = "edgesearch"
version = "0.0.1"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
base64 = "0.11.0"
bytes = "0.5.4"
byteorder = "1.3.2"
croaring = "0.4.4"
env_logger = "0.7.1"
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
structopt = "0.3.5"
